fix: scrollbar overflow

--- a/src/styles/Home.sass
+++ b/src/styles/Home.sass
@@ -1,4 +1,6 @@
 .Home
     width: 100vw,
     height: 100vh,
+    max-width: 100%,
     background: linear-gradient(115deg, #E5B181 50%, #81ADC8 50%),
+
