--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -2,3 +2,7 @@
     padding: 0
     margin: 0
     box-size: border-box
+    scrollbar-width: none
+
+::-webkit-scrollbar
+    display: none
